Included the option to export batch numbers. Fixed the height of editing board to work better on smaller screens

--- a/Textinator/static/styles/base_style.css
+++ b/Textinator/static/styles/base_style.css
@@ -529,7 +529,7 @@ textarea {
 }
 
 .editing-area .message-body {
-  max-height: 250px;
+  max-height: 150px;
   -ms-overflow-y: scroll;
   overflow-y: scroll;
 }
